--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,9 @@ ipykernel = "^6.29.3"
 selenium = "^4.18.1"
 jupyter = "^1.0.0"
 pandas = "^2.2.1"
-psycopg2 = "^2.9.9"
 pyinstaller = "^6.5.0"
+psycopg2-binary = "^2.9.9"
+pytest = "^8.2.2"
 
 
 [build-system]
