--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pandas = "^2.2.1"
 pyinstaller = "^6.5.0"
 psycopg2-binary = "^2.9.9"
 pytest = "^8.2.2"
+sqlalchemy = "^2.0.32"
 
 
 [build-system]
